--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
 Flask-Jsonpify==1.5.0
+gunicorn==20.1.0
 idna==2.10
 importlib-metadata==4.6.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jsonify==0.5
 MarkupSafe==2.0.1
 requests==2.25.1
 typing-extensions==3.10.0.0
